Fixed responsiveness spacing issues on about page.

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -6,7 +6,7 @@
   color: white;
   height: 100%;
   justify-content: space-around;
-  @media (min-width: 800px) {
+  @media (min-width: 1150px) {
     flex-direction: row;
   }
 
